# ChangeLog for sci-mathematics/agda
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/agda/ChangeLog,v 1.10 2010/11/20 13:45:12 kolmodin Exp $

  04 Jun 2014; Vikraman Choudhury (vikraman) <vikraman@gentoo.org>
  agda-9999.ebuild:
  sci-mathematics/agda: Update quickcheck dependency

*agda-2.3.2.2-r4 (20 Apr 2014)

  20 Apr 2014; Vikraman Choudhury (vikraman) <vikraman@gentoo.org>
  +agda-2.3.2.2-r4.ebuild, -agda-2.3.2.2-r3.ebuild:
  Use quickcheck < 2.7

*agda-2.2.6-r1 (20 Nov 2010)

  20 Nov 2010; Lennart Kolmodin <kolmodin@gentoo.org> -agda-2.2.6.ebuild,
  +agda-2.2.6-r1.ebuild:
  Make sure the agda library is registered with ghc.
  Bug reported by zong_sharo.

*agda-2.2.6 (14 Sep 2010)

  14 Sep 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +files/50agda2-gentoo.el, agda-1.0.2-r2.ebuild, +agda-2.2.6.ebuild,
  +files/agda-2.2.6-emacs.patch:
  Version bump, ebuild originally from markusle (bug #303973). Also forced
  emacs on dependencies (thanks to ulm, bug #336741)

*agda-1.0.2-r2 (05 Dec 2008)

  05 Dec 2008; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
  -agda-1.0.2.ebuild, -agda-1.0.2-r1.ebuild, +agda-1.0.2-r2.ebuild:
  Emacs and dependencies fixes, thanks to ulm, bug #249360. Removed -j1
  since parallel building seems to work again.

  26 Jul 2008; Markus Dittrich <markusle@gentoo.org>
  +files/agda-1.0.2-upstream-fixes.patch, agda-1.0.2.ebuild,
  agda-1.0.2-r1.ebuild:
  Fixed several compile and QA issues (fixes bug #232349). Disabled doc
  useflag for now since installation of html docs is broken.

  31 Oct 2007; Duncan Coutts <dcoutts@gentoo.org> agda-1.0.2.ebuild,
  agda-1.0.2-r1.ebuild:
  Drop virtual/ghc in favour of dev-lang/ghc

*agda-1.0.2-r1 (23 Sep 2007)

  23 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  +agda-1.0.2-r1.ebuild:
  add elisp-site-regen to postrm and canonicalise it in postinst; depending on
  USE=emacs
